perf(cli): choose the collector and the heap from a measurement
B-27. Six configurations over the same 1 GB local-swarm download, three
runs each, round robin: G1 and ZGC, with and without compact object
headers, at 256, 128 and 64 MB of heap. Research §1.2d has the table and
`./gradlew :cli:collectorBench` redoes it.

G1 stays. ZGC delivers pauses a hundred times shorter and charges 90 MB
of resident memory for them, which is the wrong trade for a client that
has no frame to miss and whose own timers are in seconds.

Two things the item did not ask for came out of it. Compact object
headers are not measurable at a live set of 8 MB, so the flag is kept for
a different reason than D6 gave. And -Xmx, treated as the constant of the
experiment, mattered more than the collector: at 128m the live set is
unchanged, the total pause is lower than at 256m, and the process is
80 MB smaller.

-XX:+UseG1GC is now explicit rather than inherited, because an AOT cache
built under one collector is refused under another in silence.